force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/PJN_Network_Parent_Object_Filter__mdt.object-meta.xml
<CustomObject>
    <description>Parent Object filters for Network Object Setting related</description>
    <label>Network Parent Object Filter</label>
    <pluralLabel>Network Parent Object Filters</pluralLabel>
</CustomObject>