force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_DCR__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does filter apply on DCR process?</description>
    <label>DCR?</label>
    <type>Checkbox</type>
</CustomField>