force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_Network_Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Object_Setting__c</fullName>
    <description>Network Object Setting related</description>
    <label>Network Object Setting</label>
    <referenceTo>PJN_Network_Object_Setting__mdt</referenceTo>
    <relationshipLabel>Network Parent Object Filters</relationshipLabel>
    <relationshipName>PJN_Network_Parent_Object_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>