force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Object_Record_Type__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Object record type to apply Parent filter.</description>
    <label>Object Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>