force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Field__c</fullName>
    <description>Parent field which applies the filter</description>
    <label>Parent Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>