force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_Parent_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Field_Value__c</fullName>
    <description>Parent Field filter value</description>
    <label>Parent Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>