force-app/main/default/src/objects/PJN_Network_Parent_Object_Filter__mdt/fields/PJN_Sync__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does filter apply on sync process?</description>
    <label>Sync?</label>
    <type>Checkbox</type>
</CustomField>